Friendship ended with Apache now Guava is my best friend